Fix overflow scroll clipping on Windows
Previous fix for Mac created issues for Windows rendering (go figure).
This fix has been tested on both Mac and PC and appears to be working
as intended. Scrolling works and the header does not clip the scroll
bar.

--- a/src/components/common/main.less
+++ b/src/components/common/main.less
@@ -6,9 +6,3 @@
 @import '../heading/style.less';
 @import '../post-list/style.less';
 @import '../modal/style.less';
-
-html, body {
-  height: 600px;
-  width: 400px;
-  overflow: auto; 
-}
