--- a/src/components/post-list/style.less
+++ b/src/components/post-list/style.less
@@ -2,6 +2,7 @@
   font-family: 'Roboto', Helvetica, Arial, sans-serif;
   font-size: 14px;
   padding-top: 45px;
+  width: 400px;
   
   .post-item {
     border-bottom: 1px solid @gray6;
